# Axiom

./: .gitignore  README.md
engine/: Cargo.toml
engine/axiom-bridge/: Cargo.toml
engine/axiom-bridge/src/: lib.rs
engine/axiom-core/: Cargo.toml
engine/axiom-core/src/: document.rs  fractional_index.rs  lib.rs  node.rs  operations.rs  parser.rs  properties.rs
engine/axiom-export/: Cargo.toml
engine/axiom-export/src/: lib.rs
engine/axiom-layout/: Cargo.toml
engine/axiom-layout/src/: lib.rs
engine/axiom-render/: Cargo.toml
engine/axiom-render/src/: lib.rs
engine/axiom-sync/: Cargo.toml
engine/axiom-sync/src/: lib.rs
engine/axiom-typeset/: Cargo.toml
engine/axiom-typeset/src/: lib.rs
shell/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shell/src/: main.tsx  vite-env.d.ts
shell/src/app/: routes.tsx
shell/src/app/components/: AccessibilityProvider.tsx  AccessibilitySettings.tsx  CommandPalette.tsx  CreateNoteWindow.tsx  DocumentOutlineNavigator.tsx  DocumentTabs.tsx  Editor.tsx  FloatingPanel.tsx  FloatingToolbar.tsx  Header.tsx  KeyboardShortcutsHelp.tsx  NotesPanel.tsx  NotesWindow.tsx  RadialContextMenu.tsx  ReferenceViewer.tsx  ReferencesPanel.tsx  ReferencesWindow.tsx  Root.tsx  ThemeProvider.tsx  ToolRibbon.tsx  UploadReferenceWindow.tsx  ViewSwitcher.tsx
shell/src/app/pages/: EditorPage.tsx  HomePage.tsx  ProjectPage.tsx
shell/src/app/services/: engineService.ts
shell/src/app/store/: appStore.tsx
shell/src/styles/: fonts.css  theme.css
