[workspace]
resolver = "2"
members = [
    "axiom-core",
    "axiom-layout",
    "axiom-typeset",
    "axiom-render",
    "axiom-bridge",
    "axiom-sync",
    "axiom-export",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
