[package]
name = "axiom-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-layout = { path = "../axiom-layout" }
axiom-render = { path = "../axiom-render" }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
